# passpartout_printer

./: .gitignore  Cargo.toml  README.md  colors_and_coords.txt  coords.json
examples/: draw_house.rs  draw_square.rs
src/: colors.rs  coords.rs  easel.rs  image_drawer.rs  image_trans.rs  lib.rs  main.rs  manual_config.rs  window.rs
