[package]
name = "passpartout_printer"
version = "1.0.0"
authors = ["ostrosco <ostrosco@fastmail.fm>"]
description = "Utility for drawing images into the game Passpartout: The Starving Artist."
homepage = "https://github.com/ostrosco/passpartout_printer"
repository = "https://github.com/ostrosco/passpartout_printer"
readme = "README.md"
keywords = ["art", "draw", "passpartout", "image"]
license = "MIT"

[dependencies]
enigo = "0.0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1"
failure_derive = "0.1"
image = "0.18"
clap = "2.30.0"
device_query = "0.1.0"
