[package]
name = "passpartout_printer"
version = "1.1.0"
authors = ["ostrosco <ostrosco@fastmail.fm>"]
description = "Utility for drawing images into the game Passpartout: The Starving Artist."
homepage = "https://github.com/ostrosco/passpartout_printer"
repository = "https://github.com/ostrosco/passpartout_printer"
readme = "README.md"
keywords = ["art", "draw", "passpartout", "image"]
license = "MIT"
edition = "2021"

[dependencies]
enigo = "0.0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
clap = "3.2"
device_query = "1.1"
